@@ -1809,7 +1809,7 @@
       <field cname="red" type="guint16"/>
       <field cname="green" type="guint16"/>
       <field cname="blue" type="guint16"/>
-      <method name="Copy" cname="gdk_color_copy">
+      <method name="Copy" cname="gdk_color_copy" hidden="1">
         <return-type type="GdkColor*"/>
       </method>
       <method name="Equal" cname="gdk_color_equal">
@@ -1818,13 +1818,13 @@
           <parameter type="const-GdkColor*" name="colorb"/>
         </parameters>
       </method>
-      <method name="Free" cname="gdk_color_free">
+      <method name="Free" cname="gdk_color_free" hidden="1">
         <return-type type="void"/>
       </method>
       <method name="GetType" cname="gdk_color_get_type" shared="true">
         <return-type type="GType"/>
       </method>
-      <method name="Hash" cname="gdk_color_hash">
+      <method name="Hash" cname="gdk_color_hash" hidden="1">
         <return-type type="guint"/>
       </method>
       <method name="Parse" cname="gdk_color_parse" shared="true">
