@@ -184,6 +184,19 @@
   </data>
 </rule>
 <rule>
+  <class name="GdkColor">
+    <method>Hash</method>
+    <method>Copy</method>
+    <method>Free</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>hidden</name>
+      <value>1</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
   <class name="GdkPixbuf">
     <method>AddAlpha</method>
     <method>ScaleSimple</method>
