@@ -3,6 +3,9 @@
 	* api/gtk-api.xml, sources/Gtk.metadata, gtk/ColorSelection.custom:
 	Fix up API in ColorSelection - Palette{From,To}String now work, and
 	PreviousColor is now a C# property.
+	
+	* api/gdk-api.xml, sources/Gdk.metadata, gdk/Color.custom: Hide the
+	Copy, Free and Hash methods in Gdk.Color and override GetHashCode().
 
 2003-04-12  Alp Toker <alp@atoker.com>
 
